<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.authentication.SignUpFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.authentication.SignUpFragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@mipmap/img_header" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:src="@mipmap/tmdb_logo_whole" />
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro_bold"
                android:text="@string/sign_up"
                android:textColor="#232323"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/registerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/log_in_edittext_style"
                android:fontFamily="@font/source_sans_pro_regular"
                android:hint="@string/your_name"
                android:padding="10dp" />

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/log_in_edittext_style"
                android:fontFamily="@font/source_sans_pro_regular"
                android:hint="@string/email_address"
                android:padding="10dp" />

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/log_in_edittext_style"
                android:fontFamily="@font/source_sans_pro_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp" />

            <EditText
                android:id="@+id/registerPasswordRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/log_in_edittext_style"
                android:fontFamily="@font/source_sans_pro_regular"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:padding="10dp" />

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/search_bar_button_style"
                android:text="@string/sign_up"
                android:textColor="#FFF" />

            <Button
                android:id="@+id/backToLoginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/search_bar_button_style"
                android:text="@string/go_back_to_login"
                android:textColor="#FFF" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>