<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashBoardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.dashboard.DashBoardActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#FFF"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_gravity="end"
                    android:id="@+id/profileImageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_profile"
                    tools:srcCom="@tools:sample/avatars"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/source_sans_pro_bold"
                        android:textColor="#000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/userEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/source_sans_pro_regular"
                        android:textColor="#000"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/signOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/ic_sign_out" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:id="@+id/updatePswContainer"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#5A5FEA"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:text="@string/change_your_password"
                    android:textColor="#FFF"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/updatePswEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@android:color/white"
                    android:fontFamily="@font/source_sans_pro_light"
                    android:hint="@string/new_password_here"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

                <Button
                    android:id="@+id/updatePswBtn"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/dashboard_submit_button_style"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:text="@string/submit"
                    android:textColor="#FFF" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#FB8042"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:id="@+id/updateEmailContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:text="@string/change_your_email"
                    android:textColor="#FFF"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/updateEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@android:color/white"
                    android:fontFamily="@font/source_sans_pro_light"
                    android:hint="@string/new_email_here"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

                <Button
                    android:id="@+id/updateEmailBtn"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/dashboard_submit_button_style"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:text="@string/submit"
                    android:textColor="#FFF" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#829E3C"
            app:cardCornerRadius="20dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:text="@string/upload_profile_picture"
                    android:textColor="#FFF"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/uploadImage"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/dashboard_submit_button_style"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:text="@string/submit"
                    android:textColor="#FFF" />

            </FrameLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
